--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   
-  <meta name"keywords" content="MohamedWaleed, mohamed waleed, Mohamed Waleed, Mohamed Portfolio, Mohamed Waleed Portfolio, Portfolio, portfolio, Mohamed waleed, Mohamed waleed portfolio, personal website, web development, html, css, js">
+  <meta name="keywords" content="MohamedWaleed, mohamed waleed, Mohamed Waleed, Mohamed Portfolio, Mohamed Waleed Portfolio, Portfolio, portfolio, Mohamed waleed, Mohamed waleed portfolio, personal website, web development, html, css, js">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="description" content="Mohamed Waleed's New Portfolio">
