--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
   
-  <meta name="keywords" content="MohamedWaleed, mohamed waleed, Mohamed Waleed, Mohamed Portfolio, Mohamed Waleed Portfolio, Portfolio, portfolio, Mohamed waleed, Mohamed waleed portfolio, personal website, web development, html, css, js">
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-  <meta name="description" content="Mohamed Waleed's New Portfolio">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="keywords" content="HTML, CSS, XML, JavaScript, MohamedWaleed, Mohamed Waleed, Portfolio, web development">
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=Edge">
+<meta name="description" content="Explore Mohamed Waleed's portfolio showcasing skills in HTML, CSS, and JavaScript.">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
   
 
   <title>Moahmed Waleed</title>
